# videodrop

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  dockerbuilder.sh
src/: index.html  main.rs  script.js  style.css
