[package]
name = "videodrop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # opcional, caso queira manipular JSON diretamente
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }  # Adicione features = ["v4"]
chrono = "0.4.40"

